changed email address

--- a/README
+++ b/README
@@ -14,4 +14,4 @@ Send pull requests to openembedded-devel@lists.openembedded.org with '[meta-gums
 
 When sending single patches, please using something like 'git send-email -1 --to openembedded-devel@lists.openembedded.org --subject-prefix meta-gumstix'
 
-Layer maintainer: Andreas Müller <schnitzeltony@gmx.de>
+Layer maintainer: Andreas Müller <schnitzeltony@googlemail.de>
