--- a/README
+++ b/README
@@ -6,7 +6,7 @@ URI: git://git.openembedded.org/openembedded-core
 branch: master
 revision: HEAD
 
-URI: git://git.angstrom-distribution.org/meta-texasinstruments
+URI: git://git.yoctoproject.org/meta-ti
 branch: master
 revision: HEAD
 
